--- a/src/edu/shoppingMall/listener/ActionMapping.properties
+++ b/src/edu/shoppingMall/listener/ActionMapping.properties
@@ -17,6 +17,8 @@ productInsert=edu.shoppingMall.controller.productController.ProductInsertControl
 productSelectAll=edu.shoppingMall.controller.productController.ProductSelectAllController
 productSelectBy=edu.shoppingMall.controller.productController.ProductSelectBySearchController
 productUpdate=edu.shoppingMall.controller.productController.ProductUpdateController
+productUpdateForm=edu.shoppingMall.controller.productController.ProductUpdateFormController
+productDetail=edu.shoppingMall.controller.productController.ProductDetailController
 
 qnaDelete=edu.shoppingMall.controller.qnaBoardController.QnABoardDeleteController
 qnaInsert=edu.shoppingMall.controller.qnaBoardController.QnABoardInsertController
