--- a/src/edu/shoppingMall/listener/ActionMapping.properties
+++ b/src/edu/shoppingMall/listener/ActionMapping.properties
@@ -23,6 +23,8 @@ qnaInsert=edu.shoppingMall.controller.qnaBoardController.QnABoardInsertControlle
 qnaSelectAll=edu.shoppingMall.controller.qnaBoardController.QnABoardSelectAllController
 qnaSelectBy=edu.shoppingMall.controller.qnaBoardController.QnABoardSelectBySearchController
 qnaUpdate=edu.shoppingMall.controller.qnaBoardController.QnABoardUpdateController
+qnaUpdateForm=edu.shoppingMall.controller.qnaBoardController.QnABoardUpdateFormController
+qnaRead=edu.shoppingMall.controller.qnaBoardController.QnABoardReadController
 
 userSelectAll=edu.shoppingMall.controller.userByAdminController.UserSelectAllController
 userSelectBy=edu.shoppingMall.controller.userByAdminController.UserSelectBySearchController
